--- a/vignettes/re_ml_01.html
+++ b/vignettes/re_ml_01.html
@@ -480,7 +480,7 @@ mod_knn &lt;- train(
 </div>
 <div id="load-evaluation-function" class="section level3">
 <h3>3.2 Load evaluation function</h3>
-<pre class="r"><code>source(here::here(&quot;analysis&quot;, &quot;eval_model.R&quot;))</code></pre>
+<pre class="r"><code>source(here::here(&quot;function&quot;, &quot;eval_model.R&quot;))</code></pre>
 </div>
 <div id="evaluate-models" class="section level3">
 <h3>3.3 Evaluate models</h3>
